--- a/PMS.UI/Views/AddProjectWindow.xaml
+++ b/PMS.UI/Views/AddProjectWindow.xaml
@@ -1,10 +1,9 @@
-﻿<Window x:Class="PMS.UI.Views.AddTaskWindow"
+﻿<Window x:Class="PMS.UI.Views.AddProjectWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:PMS.UI.Views"
-        xmlns:vm="clr-namespace:PMS.UI.ViewModels"
-        Title="Zadanie"
-        Height="420" Width="400"
+        Title="Nowy projekt"
+        Height="200" Width="350"
         WindowStartupLocation="CenterOwner">
-    <views:AddTaskView/>
+    <views:AddProjectView/>
 </Window>
