--- a/PMS.UI/Views/AddTaskView.xaml
+++ b/PMS.UI/Views/AddTaskView.xaml
@@ -1,78 +1,78 @@
-﻿<UserControl
-    x:Class="PMS.UI.Views.AddTaskView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:vm="clr-namespace:PMS.Presentation.ViewModels;assembly=PMS.Presentation">
+﻿<UserControl x:Class="PMS.UI.Views.AddTaskView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             Height="Auto" Width="Auto">
+  <Grid Margin="10">
+    <Grid.RowDefinitions>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="Auto"/>
+    </Grid.RowDefinitions>
 
-    <Grid Margin="16">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+    <!-- Tytuł zadania -->
+    <StackPanel Grid.Row="0">
+      <TextBlock Text="Tytuł:"/>
+      <TextBox
+        Text="{Binding Title,
+               UpdateSourceTrigger=PropertyChanged,
+               ValidatesOnDataErrors=True}"
+        Margin="0,2,0,0"/>
+    </StackPanel>
 
-        <TextBlock Grid.Row="0" Grid.Column="0"
-               Text="Title:"
-               VerticalAlignment="Center"
-               Margin="0,0,4,4"/>
-        <TextBox   Grid.Row="0" Grid.Column="1"
-               Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"
-               Margin="0,0,0,4"/>
+    <!-- Opis zadania -->
+    <StackPanel Grid.Row="1" Margin="0,10,0,0">
+      <TextBlock Text="Opis:"/>
+      <TextBox
+        Text="{Binding Description,
+               UpdateSourceTrigger=PropertyChanged}"
+        AcceptsReturn="True"
+        Height="60"
+        Margin="0,2,0,0"/>
+    </StackPanel>
 
-        <TextBlock Grid.Row="1" Grid.Column="0"
-               Text="Description:"
-               VerticalAlignment="Center"
-               Margin="0,0,4,4"/>
-        <TextBox   Grid.Row="1" Grid.Column="1"
-               Text="{Binding Description}"
-               AcceptsReturn="True"
-               Height="60"
-               Margin="0,0,0,4"/>
+    <!-- Termin zakończenia -->
+    <StackPanel Grid.Row="2" Margin="0,10,0,0">
+      <TextBlock Text="Termin zakończenia:"/>
+      <DatePicker
+        SelectedDate="{Binding Deadline,
+                       UpdateSourceTrigger=PropertyChanged,
+                       ValidatesOnDataErrors=True}"
+        Margin="0,2,0,0"/>
+    </StackPanel>
 
-        <TextBlock Grid.Row="2" Grid.Column="0"
-               Text="Due date:"
-               VerticalAlignment="Center"
-               Margin="0,0,4,4"/>
-        <DatePicker Grid.Row="2" Grid.Column="1"
-                SelectedDate="{Binding DueDate}"
-                Margin="0,0,0,4"/>
+    <!-- Status zadania -->
+    <StackPanel Grid.Row="3" Margin="0,10,0,0">
+      <TextBlock Text="Status:"/>
+      <ComboBox
+        ItemsSource="{Binding AllStates}"
+        SelectedItem="{Binding State, Mode=TwoWay}"
+        Margin="0,2,0,0"/>
+    </StackPanel>
 
-        <TextBlock Grid.Row="3" Grid.Column="0"
-               Text="State:"
-               VerticalAlignment="Center"
-               Margin="0,0,4,4"/>
-        <ComboBox  Grid.Row="3" Grid.Column="1"
-               ItemsSource="{Binding AllStates}"
-               SelectedItem="{Binding State}"
-               Margin="0,0,0,4"/>
+    <!-- Priorytet zadania -->
+    <StackPanel Grid.Row="4" Margin="0,10,0,0">
+      <TextBlock Text="Priorytet:"/>
+      <ComboBox
+        ItemsSource="{Binding AllPriorities}"
+        SelectedItem="{Binding Priority, Mode=TwoWay}"
+        Margin="0,2,0,0"/>
+    </StackPanel>
 
-        <TextBlock Grid.Row="4" Grid.Column="0"
-               Text="Priority:"
-               VerticalAlignment="Center"
-               Margin="0,0,4,4"/>
-        <ComboBox  Grid.Row="4" Grid.Column="1"
-               ItemsSource="{Binding AllPriorities}"
-               SelectedItem="{Binding Priority}"
-               Margin="0,0,0,4"/>
-
-        <StackPanel Grid.Row="5" Grid.ColumnSpan="2"
+    <!-- Przyciski -->
+    <StackPanel Grid.Row="5"
                 Orientation="Horizontal"
                 HorizontalAlignment="Right"
-                Margin="0,8,0,0">
-            <Button Content="OK"
-              Width="75"
+                Margin="0,10,0,0">
+            <Button Content="Zatwierdź"
+              Width="80"
+              Margin="0,0,10,0"
               Command="{Binding ConfirmCommand}"
-              Margin="0,0,4,0"/>
-            <Button Content="Cancel"
-              Width="75"
-              Command="{Binding CancelCommand}"/>
+              CommandParameter="{Binding 
+              RelativeSource={RelativeSource AncestorType=Window}}"
+              IsDefault="True"/>
         </StackPanel>
-    </Grid>
+  </Grid>
 </UserControl>
