--- a/PMS.UI/Views/AddProjectView.xaml
+++ b/PMS.UI/Views/AddProjectView.xaml
@@ -26,14 +26,12 @@
         </StackPanel>
 
         <StackPanel Grid.Row="2"
-                Orientation="Horizontal"
-                HorizontalAlignment="Right"
+                HorizontalAlignment="Center"
                 Margin="0,10,0,0">
             <Button Content="Zatwierdź"
-              Width="80"
-              Margin="0,0,10,0"
               Command="{Binding ConfirmCommand}"
-              CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"/>
+              CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
+              Style="{StaticResource IconButtonStyle}"/>
         </StackPanel>
     </Grid>
 </UserControl>
