--- a/PMS.UI/Views/MainWindow.xaml
+++ b/PMS.UI/Views/MainWindow.xaml
@@ -15,21 +15,20 @@
         <local:StringNotEmptyToVisibilityConverter x:Key="NonEmptyToVisibility"/>
     </Window.Resources>
 
-    <Grid Margin="5" Background="White">
+    <Grid Margin="5">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="190"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <Border Grid.Column="0"
-                BorderBrush="LightGray"
                 BorderThickness="1"
                 CornerRadius="4"
                 Padding="4">
             <views:ProjectListView/>
         </Border>
 
-        <Grid Grid.Column="1" Background="White" Margin="5,0,0,0">
+        <Grid Grid.Column="1" Margin="5,0,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
