--- a/PMS.UI/Views/ProjectDetailsView.xaml
+++ b/PMS.UI/Views/ProjectDetailsView.xaml
@@ -7,10 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <Border BorderBrush="LightGray" BorderThickness="1" CornerRadius="4" Padding="4">
+    <Border BorderThickness="1" CornerRadius="4" Padding="4">
         <StackPanel>
             <!-- Nagłówek projektu -->
-            <Grid Margin="0" Background="White">
+            <Grid Margin="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="auto"/>
@@ -26,21 +26,21 @@
 
                 <Button Grid.Column="1"
                         Content="Edit"
-                        Width="50" Height="20"
-                        VerticalAlignment="Bottom"
+                        Width="auto"
                         Command="{Binding ProjectList.EditProjectCommand}"
-                        Margin="5,5,0,5" />
+                        Margin="5,5,0,5" 
+                        Style="{StaticResource IconButtonStyle}"/>
 
                 <Button Grid.Column="2"
                         Content="Delete"
-                        Width="50" Height="20"
-                        VerticalAlignment="Bottom"
+                        Width="auto"
                         Command="{Binding ProjectList.RemoveProjectCommand}"
-                        Margin="5,5,0,5" />
+                        Margin="5,5,0,5" 
+                        Style="{StaticResource IconButtonStyle}"/>
             </Grid>
 
             <!-- Szczegóły projektu -->
-            <Grid Margin="0,0,0,5" Background="LightGray">
+            <Grid Margin="0,0,0,5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="3*"/>
