--- a/PMS.UI/Views/TaskListHeaderView.xaml
+++ b/PMS.UI/Views/TaskListHeaderView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:PMS.UI.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Border Padding="4" Margin="5,5,5,0" Background="LightGray">
+    <Border Padding="4" Margin="5,5,5,0">
         <Grid Grid.Row="3" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width=".5*"/>
