--- a/PMS.UI/Views/TaskPanelView.xaml
+++ b/PMS.UI/Views/TaskPanelView.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:views="clr-namespace:PMS.UI.Views">
-    <Border BorderBrush="LightGray"
-            BorderThickness="1"
+    <Border BorderThickness="1"
             CornerRadius="4"
             Margin="0,10,0,0">
         <StackPanel>
