--- a/PMS.UI/Resources/ResourceDictionary.xaml
+++ b/PMS.UI/Resources/ResourceDictionary.xaml
@@ -49,7 +49,7 @@
                             <Setter Property="Background" Value="#E5E7EB"/>
                             <Setter Property="Foreground" Value="#9CA3AF"/>
                         </Trigger>
-
+                        
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
@@ -65,18 +65,34 @@
         <Setter Property="Padding" Value="6"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="FontWeight" Value="Normal"/>
+        <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="TextBox">
-                    <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            CornerRadius="6">
-                        <ScrollViewer Margin="0" x:Name="PART_ContentHost"/>
+                    <Border x:Name="Border"
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="6">
+                        <ScrollViewer x:Name="PART_ContentHost" Margin="0"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Setter Property="Validation.ErrorTemplate">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border BorderBrush="#EF4444"
+                    BorderThickness="2"
+                    CornerRadius="6"
+                    SnapsToDevicePixels="True"
+                    Background="{Binding Background, RelativeSource={RelativeSource AncestorType=TextBox}}">
+                        <AdornedElementPlaceholder/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
     </Style>
 
     <!-- ComboBox Style -->
