--- a/PMS.UI/Views/TaskView.xaml
+++ b/PMS.UI/Views/TaskView.xaml
@@ -10,7 +10,8 @@
     <Border BorderThickness="1"
           CornerRadius="4"
           Padding="8"
-          Margin="4">
+          Margin="4"
+          Style="{StaticResource FirstRoundedBorderStyle}">
         <Grid>
             <Grid.ColumnDefinitions>
                 <!-- Tytuł -->
