fix border styles

--- a/PMS.UI/Views/MainWindow.xaml
+++ b/PMS.UI/Views/MainWindow.xaml
@@ -21,10 +21,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Border Grid.Column="0"
-                BorderThickness="1"
-                CornerRadius="4"
-                Padding="4">
+        <Border Grid.Column="0" >
             <views:ProjectListView/>
         </Border>
 
