--- a/PMS.UI/Views/ProjectDetailsView.xaml
+++ b/PMS.UI/Views/ProjectDetailsView.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <Border BorderThickness="1" CornerRadius="4">
+    <Border BorderThickness="1" Style="{StaticResource FirstRoundedBorderStyle}">
         <StackPanel>
             <!-- Nagłówek projektu -->
             <Grid Margin="0">
