--- a/PMS.UI/Views/AddProjectView.xaml
+++ b/PMS.UI/Views/AddProjectView.xaml
@@ -10,7 +10,7 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0">
-            <TextBlock Text="Nazwa:"/>
+            <TextBlock Text="Name:"/>
             <TextBox Text="{Binding Name,
                       UpdateSourceTrigger=PropertyChanged,
                       ValidatesOnDataErrors=True}"
@@ -28,7 +28,7 @@
         <StackPanel Grid.Row="2"
                 HorizontalAlignment="Center"
                 Margin="0,10,0,0">
-            <Button Content="Zatwierdź"
+            <Button Content="Confirm"
               Command="{Binding ConfirmCommand}"
               CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
               Style="{StaticResource IconButtonStyle}"/>
