--- a/PMS.UI/Views/AddTaskView.xaml
+++ b/PMS.UI/Views/AddTaskView.xaml
@@ -14,7 +14,7 @@
 
     <!-- Tytuł zadania -->
     <StackPanel Grid.Row="0">
-      <TextBlock Text="Tytuł:"/>
+      <TextBlock Text="Title:"/>
       <TextBox
         Text="{Binding Title,
                UpdateSourceTrigger=PropertyChanged,
@@ -24,7 +24,7 @@
 
     <!-- Opis zadania -->
     <StackPanel Grid.Row="1" Margin="0,10,0,0">
-      <TextBlock Text="Opis:"/>
+      <TextBlock Text="Description:"/>
       <TextBox
         Text="{Binding Description,
                UpdateSourceTrigger=PropertyChanged}"
@@ -35,7 +35,7 @@
 
     <!-- Termin zakończenia -->
     <StackPanel Grid.Row="2" Margin="0,10,0,0">
-      <TextBlock Text="Termin zakończenia:"/>
+      <TextBlock Text="Deadline:"/>
       <DatePicker
         SelectedDate="{Binding Deadline,
                        UpdateSourceTrigger=PropertyChanged,
@@ -45,7 +45,7 @@
 
     <!-- Status zadania -->
     <StackPanel Grid.Row="3" Margin="0,10,0,0">
-      <TextBlock Text="Status:"/>
+      <TextBlock Text="State:"/>
       <ComboBox
         ItemsSource="{Binding AllStates}"
         SelectedItem="{Binding State, Mode=TwoWay}"
@@ -54,7 +54,7 @@
 
     <!-- Priorytet zadania -->
     <StackPanel Grid.Row="4" Margin="0,10,0,0">
-      <TextBlock Text="Priorytet:"/>
+            <TextBlock Text="Priority:"/>
       <ComboBox
         ItemsSource="{Binding AllPriorities}"
         SelectedItem="{Binding Priority, Mode=TwoWay}"
@@ -66,7 +66,7 @@
                 Orientation="Horizontal"
                 HorizontalAlignment="Right"
                 Margin="0,10,0,0">
-            <Button Content="Zatwierdź"
+            <Button Content="Confirm"
               Width="80"
               Margin="0,0,10,0"
               Command="{Binding ConfirmCommand}"
